--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<img class="logo" src="./src/assets/logo.png" alt="app logo">
 					</a>
 				</div>
-				<div class="md:block">
+				<div class="md:block hidden">
 					<ul class="flex space-x-4">
 						<li>
 							<a
