--- a/index.html
+++ b/index.html
@@ -22,24 +22,31 @@
 						<img class="logo" src="./src/assets/logo.png" alt="app logo">
 					</a>
 				</div>
-				<div class="md:block hidden">
+
+				<div class="md:flex hidden">
 					<ul class="flex space-x-4">
-						<li>
-							<a
-								href="/"
-								class="text-white hover:text-black text-lg font-bold link-item"
-								>Home</a
-							>
-						</li>
-						<li>
-							<a
-								href="/orders"
-								class="text-white hover:text-black text-lg font-bold link-item"
-								>Orders</a
-							>
-						</li>
+					  <li>
+						<a
+						  href="/"
+						  class="text-white hover:text-black text-lg font-bold link-item"
+						  >Home</a
+						>
+					  </li>
+					  <li>
+						<a
+						  href="/orders"
+						  class="text-white hover:text-black text-lg font-bold link-item"
+						  >Orders</a
+						>
+					  </li>
+					  <li>
+						<button id="logoutButton" class="text-white hover:text-black text-lg font-bold link-item">
+						  Logout
+						</button>
+					  </li>
 					</ul>
 				</div>
+				  
 				<div class="w-16 flex justify-end pr-2">
 					<div class="md:hidden">
 						<button
@@ -66,6 +73,11 @@
 							class="block px-4 py-2 hover:bg-gray-600"
 							>Orders</a
 						>
+					</li>
+					<li>
+						<button class="block px-4 py-2 hover:bg-gray-600">
+							Logout
+						</button>
 					</li>
 				</ul>
 			</div>
